chore: fixed build

--- a/packages/person/package.json
+++ b/packages/person/package.json
@@ -37,6 +37,9 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@chancejs/generator": "1.0.0"
+    "@chancejs/generator": "1.0.0",
+    "@chancejs/time": "1.0.0",
+    "@chancejs/picker": "1.0.0",
+    "@chancejs/natural": "1.0.0"
   }
 }
