--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,7 @@ jobs:
       - name: yarn install and test
         run: |
           yarn install
+          yarn build
           yarn test
         env:
           CI: true
