--- a/packages/time/package.json
+++ b/packages/time/package.json
@@ -35,5 +35,11 @@
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "@chancejs/generator": "1.0.0",
+    "@chancejs/integer": "1.0.0",
+    "@chancejs/picker": "1.0.0",
+    "@chancejs/natural": "1.0.0"
   }
 }
