--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@nx/jest": "19.0.0",
     "docpress": "0.7.1",
     "git-update-ghpages": "1.3.0",
     "husky": "^9.0.11",
+    "jest": "^29.4.1",
     "lint-staged": "^15.2.2",
+    "nx": "19.0.0",
     "nyc": "^15.1.0",
     "plop": "^3.1.0",
     "prettier": "3.2.5"
@@ -36,8 +39,9 @@
     "package:create": "plop --plopfile ./scripts/create-package/plopfile.js",
     "generator:create": "plop --plopfile ./scripts/create-generator/plopfile.js",
     "function:create": "plop --plopfile ./scripts/create-function/plopfile.js",
-    "test:all": "yarn cache clean && yarn test",
-    "build:all": "yarn cache clean && yarn build",
+    "test:all": "yarn nx run-many -t test",
+    "build:all": "yarn nx run-many -t build",
+    "graph": "yarn nx graph",
     "prepare": "husky"
   },
   "keywords": [
