--- a/packages/animal/tsconfig.json
+++ b/packages/animal/tsconfig.json
@@ -11,6 +11,6 @@
       "src/*": ["./src/*"]
     }
   },
-  "include": ["src", "index.ts"],
+  "include": ["src"],
   "exclude": ["**/*.test.ts"]
 }
