--- a/packages/pick/package.json
+++ b/packages/pick/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@chancejs/pick",
+  "name": "@johnallentech/pick",
   "version": "1.0.0",
   "description": "Generate a random pick with Chance.js.",
   "homepage": "https://chancejs.com/",
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chancejs/chancejs.git"
+    "url": "git+https://github.com/JohnAllenTech/chancejs.git"
   },
   "license": "MIT",
   "bugs": {
@@ -37,7 +37,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@chancejs/generator": "1.0.0",
-    "@chancejs/natural": "1.0.0"
+    "@johnallentech/generator": "1.0.2",
+    "@johnallentech/natural": "1.0.0"
   }
 }
